--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"express-session": "^1.17.0",
 		"firebase": "^7.2.2",
 		"massive": "^6.1.1",
 		"react": "^16.11.0",
 		"react-dom": "^16.11.0",
 		"react-firebase-file-uploader": "^2.4.3",
+		"react-router-dom": "^5.1.2",
 		"react-scripts": "3.2.0"
 	},
 	"proxy": "http://localhost:3001",
